--- a/studies/html/index.html
+++ b/studies/html/index.html
@@ -4,18 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercises HTML</title>
+    <style>
+        #content{
+            padding: 30px 0px;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>Exercises HTML</h1>
     </header>
     <nav>
-        <a href wm-nav="exercises/test.html"> 00 - test</a> |
-        <a href wm-nav="exercises/test2.html"> 01 - test</a>
+        <a href wm-nav="exercises/test.html"> 00 - Test</a> |
+        <a href wm-nav="exercises/text1.html"> 01 - Text</a>
     </nav>
     <section id="content"></section>
     <footer>
-        <br>
         Modern Web
     </footer>
     <script>
