--- a/studies/html/index.html
+++ b/studies/html/index.html
@@ -16,7 +16,8 @@
     </header>
     <nav>
         <a href wm-nav="exercises/test.html"> 00 - Test</a> |
-        <a href wm-nav="exercises/text1.html"> 01 - Text</a>
+        <a href wm-nav="exercises/text1.html"> 01 - Text</a>|<a href wm-nav="exercises/text2.html"> 02 - Text</a>|
+        <a href wm-nav="exercises/text1.html"> 01 - Text</a>|<a href wm-nav="exercises/lists.html"> 03 - Lists</a>|
     </nav>
     <section id="content"></section>
     <footer>
