nested list html

--- a/studies/html/index.html
+++ b/studies/html/index.html
@@ -18,6 +18,7 @@
         <a href wm-nav="exercises/test.html"> 00 - Test</a> |
         <a href wm-nav="exercises/text1.html"> 01 - Text</a>|<a href wm-nav="exercises/text2.html"> 02 - Text</a>|
         <a href wm-nav="exercises/text1.html"> 01 - Text</a>|<a href wm-nav="exercises/lists.html"> 03 - Lists</a>|
+        <a href wm-nav="exercises/text1.html"> 01 - Text</a>|<a href wm-nav="exercises/nestedList.html"> 04 - Nested List</a>|
     </nav>
     <section id="content"></section>
     <footer>
