bug fix in img slider

--- a/studies/html/exercises/images.html
+++ b/studies/html/exercises/images.html
@@ -87,7 +87,7 @@
         slide.style.display = 'block'
 
         const start = innerWidth
-        const end = -slide.clientWitdth
+        const end = -slide.clientWidth
 
         slide.style.left = `${start}px`
 
