css anatomy and tags

--- a/studies/css/classTag.html
+++ b/studies/css/classTag.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Tag Class</title>
+    <title>Class Tag</title>
     <link rel="stylesheet" href="css/tag.css">
 </head>
 
