--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -64,9 +64,9 @@
             <h1>Exercícios de CSS</h1>
             <nav>
                 <a href="./intro.html">CSS Intro</a>
-                <a href="./anatomia.html">Anatomia CSS</a>
-                <a href="./origem.html">Origem</a>
-                <a href="./classeTag.html">Criando Classe <strong>.tag</strong></a>
+                <a href="./anatomy.html">Anatomy CSS</a>
+                <a href="./source.html">Source</a>
+                <a href="./classTag.html">Creating Class <strong>.tag</strong></a>
                 <a href="./seletores.html">Seletores</a>
                 <a href="./especificidade1.html">Especificidade CSS #01</a>
                 <a href="./especificidade2.html">Especificidade CSS #02</a>
