--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -67,7 +67,7 @@
                 <a href="./anatomy.html">Anatomy CSS</a>
                 <a href="./source.html">Source</a>
                 <a href="./classTag.html">Creating Class <strong>.tag</strong></a>
-                <a href="./seletores.html">Seletores</a>
+                <a href="./selectors.html">Selectors</a>
                 <a href="./especificidade1.html">Especificidade CSS #01</a>
                 <a href="./especificidade2.html">Especificidade CSS #02</a>
                 <a href="./heranca.html">Herança</a>
