--- a/studies/css/selectors.html
+++ b/studies/css/selectors.html
@@ -6,7 +6,10 @@
     <title>CSS Selectors</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        section > span:nth-of-type(2){
+            color: #ff0;
+            background-color: #f77;
+        }
     </style>
 </head>
 
@@ -14,22 +17,22 @@
     <div class='tag'>
         <div class='tag'>
             <p class='tag'>1</p>
-            <ul class='tag' feira='casa'>
-                <li>Arroz</li>
-                <li>Feijão</li>
+            <ul class='tag' market='home'>
+                <li>Rice</li>
+                <li>Bean</li>
             </ul>
-            <ul class='tag' feira='escritorio empresa'>
-                <li>Café</li>
-                <li>Água</li>
+            <ul class='tag' market='company office'>
+                <li>Coffee</li>
+                <li>Water</li>
             </ul>
-            <ol id='aprovados' class='tag'>
+            <ol id='approved' class='tag'>
                 <li>Maria</li>
                 <li>Pedro</li>
                 <li>Ana</li>
             </ol>
-            <div id='aninhado' class='tag'>
+            <div id='nested' class='tag'>
                 <div class="tag">
-                    <section class='tag'>
+                    <section class='tag nolabel'>
                         <span class='tag'>1</span>
                         <p class='tag'>2</p>
                         <span class='tag'>3</span>
