--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -68,8 +68,8 @@
                 <a href="./source.html">Source</a>
                 <a href="./classTag.html">Creating Class <strong>.tag</strong></a>
                 <a href="./selectors.html">Selectors</a>
-                <a href="./especificidade1.html">Especificidade CSS #01</a>
-                <a href="./especificidade2.html">Especificidade CSS #02</a>
+                <a href="./specifity1.html">Specificity CSS #01</a>
+                <a href="./specificity2.html">Specificity CSS #02</a>
                 <a href="./heranca.html">Herança</a>
                 <a href="./box.html">Box Model</a>
                 <a href="./margin.html">Margin Collapse</a>
