--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -70,7 +70,7 @@
                 <a href="./selectors.html">Selectors</a>
                 <a href="./specifity1.html">Specificity CSS #01</a>
                 <a href="./specificity2.html">Specificity CSS #02</a>
-                <a href="./heranca.html">Herança</a>
+                <a href="./inheritance.html">Inheritance</a>
                 <a href="./box.html">Box Model</a>
                 <a href="./margin.html">Margin Collapse</a>
                 <a href="./display.html">Display</a>
