--- a/studies/css/margin.html
+++ b/studies/css/margin.html
@@ -36,11 +36,11 @@
 </head>
 
 <body>
-    <div class="m30">Conteúdo 1</div>
+    <div class="m30">Content 1</div>
     <div class="m30" style="border: none"></div>
-    <div class="m30">Conteúdo 2</div>
-    <div class="mb30">Conteúdo 3</div>
-    <div class="mt30">Conteúdo 4</div>
+    <div class="m30">Content 2</div>
+    <div class="mb30">Content 3</div>
+    <div class="mt30">Content 4</div>
 </body>
 
 </html>
