CSS box sizing, overflow and height/width.

--- a/studies/css/overflow.html
+++ b/studies/css/overflow.html
@@ -9,14 +9,18 @@
             height: 100px;
             width: 260px;
             border: solid 3px;
+            /*overflow: hidden;*/
+           /* overflow: scroll;*/
+            overflow-x: scroll;
+            overflow-y: hidden;
         }
     </style>
 </head>
 <body>
     <div>
-        TudoFuncionaMuitoBemEmCSS!!!
-        Texto muito grande para caber nessa div.
-        Já pensou qual será o comportamento padrão?
+        EverythingWorksVeryWellInCSS!!!
+        Text too large to fit in this div.
+        Have you thought about what will be the default behavior?
     </div>
 </body>
 </html>
