--- a/studies/css/heightAndWidth.html
+++ b/studies/css/heightAndWidth.html
@@ -3,11 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Altura e Largura</title>
+    <title>Height and Width</title>
     <style>
+        html {
+            height: 100%;
+        }
         body {
             font-size: 40px;
             background-color: coral;
+            height: 100%;
+            margin: 0;
         }
 
         div {
@@ -17,12 +22,19 @@
         span {
             background-color: dodgerblue;
         }
+
+        span, div {
+            width: 50%;
+            height: 250px;
+            height: 50%;
+            display: block;
+        }
     </style>
 </head>
 
 <body>
-    <div>Título</div>
-    <span>Subtítulo</span>
+    <div>Title</div>
+    <span>Subtitle</span>
 </body>
 
 </html>
