CSS absolute/relative units

--- a/studies/css/colors.html
+++ b/studies/css/colors.html
@@ -20,7 +20,7 @@
             background-color: rgba(55, 110, 220, .5);
             /* hue, saturation and lightness */
             background-color: hsl(299, 58%, 50%);
-            background-color: hsla(299, 58%, 20%, 0.5);
+            background-color: hsla(299, 58%, 20%, .5);
         }
     </style>
 </head>
