--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -81,7 +81,7 @@
             </nav>
             <nav>
                 <a href="./colors.html">Colors</a>
-                <a href="./unidades1.html">Unidades #01</a>
+                <a href="./units1.html">Units #01</a>
                 <a href="./unidades2.html">Unidades #02</a>
                 <a href="./texto.html">Texto</a>
                 <a href="./position.html">Position</a>
