--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -83,7 +83,7 @@
                 <a href="./colors.html">Colors</a>
                 <a href="./units1.html">Units #01</a>
                 <a href="./units2.html">Units #02</a>
-                <a href="./texto.html">Texto</a>
+                <a href="./text.html">Text</a>
                 <a href="./position.html">Position</a>
                 <a href="./mediaQuery.html">Media Query</a>
                 <a href="./desafioMenu.html">Desafio Menu</a>
