CSS positions and mediaQuery

--- a/studies/css/mediaQuery.html
+++ b/studies/css/mediaQuery.html
@@ -12,11 +12,23 @@
             border: solid 5px;
             display: none;
         }
+
+        @media (max-width: 600px) {
+            .very-small {display: block;}
+        }
+
+        @media (max-width: 1000px), (orientation: portrait) {
+            .small-picture { display: block;}
+        }
+
+        @media(min-width: 500px) and (max-width: 1000px){
+            .interval { display: block;}
+        }
     </style>
 </head>
 <body>
-    <div class="muito-pequeno">Muito Pequeno</div>
-    <div class="pequeno-retrato">Pequeno ou Retrato</div>
-    <div class="intervalo">Intervalo</div>
+    <div class="very-small">Very Small</div>
+    <div class="small-picture">Small or Picture</div>
+    <div class="interval">Interval</div>
 </body>
 </html>
