--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -86,7 +86,7 @@
                 <a href="./text.html">Text</a>
                 <a href="./position.html">Position</a>
                 <a href="./mediaQuery.html">Media Query</a>
-                <a href="./desafioMenu.html">Desafio Menu</a>
+                <a href="./menuChallenge.html">Menu Challenge</a>
                 <a href="./desafioCard.html">Desafio Card</a>
                 <a href="./flexbox1.html">Flex Box #1</a>
                 <a href="./flexbox2.html">Flex Box #2</a>
