--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -87,7 +87,7 @@
                 <a href="./position.html">Position</a>
                 <a href="./mediaQuery.html">Media Query</a>
                 <a href="./menuChallenge.html">Menu Challenge</a>
-                <a href="./desafioCard.html">Desafio Card</a>
+                <a href="./cardChallenge.html">Card Challenge</a>
                 <a href="./flexbox1.html">Flex Box #1</a>
                 <a href="./flexbox2.html">Flex Box #2</a>
                 <a href="./flexbox3.html">Flex Box #3</a>
