--- a/studies/css/index.html
+++ b/studies/css/index.html
@@ -68,7 +68,7 @@
                 <a href="./source.html">Source</a>
                 <a href="./classTag.html">Creating Class <strong>.tag</strong></a>
                 <a href="./selectors.html">Selectors</a>
-                <a href="./specifity1.html">Specificity CSS #01</a>
+                <a href="./specificity1.html">Specificity CSS #01</a>
                 <a href="./specificity2.html">Specificity CSS #02</a>
                 <a href="./inheritance.html">Inheritance</a>
                 <a href="./box.html">Box Model</a>
