--- a/studies/css/cssgrid3.html
+++ b/studies/css/cssgrid3.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <main class="tag">CONTEÚDO</main>
-    <header class="tag">CABEÇALHO</header>
-    <footer class="tag">RODAPÉ</footer>
-    <nav class="tag">NAVEGAÇÃO</nav>
+    <main class="tag">Content</main>
+    <header class="tag">Header</header>
+    <footer class="tag">Footer</footer>
+    <nav class="tag">Navigation</nav>
 
     <script src="js/tag.js"></script>
 </body>
