--- a/studies/css/cssgrid3.html
+++ b/studies/css/cssgrid3.html
@@ -6,7 +6,42 @@
     <title>CSS Grid #03</title>
     <link rel="stylesheet" href="css/tag.css">
     <style>
-        /* ... */
+        *{
+            padding: 0;
+            margin: 0;
+        }
+
+        header {
+            grid-area: header;
+        }
+
+        nav {
+            grid-area: navigation;
+        }
+        
+        main{
+            grid-area: content1;
+        }
+        
+        footer {
+            grid-area: footer;
+        }
+
+        body {
+            display: grid;
+            min-height: 100vh;
+            grid-template-columns: 300px 1fr;
+            grid-template-rows: 100px 1fr 100px;
+            grid-template-areas: 'header header''navigation content1''footer footer';
+        }
+
+        @media(max-width: 700px){
+            body{
+                grid-template-columns: 1fr;
+                grid-template-rows: 80px 80px 1fr 100px;
+                grid-template-areas: 'header''navigation''content1''footer';
+            }
+        }
     </style>
 </head>
 
