--- a/studies/dom/selectingElements4.html
+++ b/studies/dom/selectingElements4.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Selecionar Elementos #04</title>
-    <link rel="stylesheet" href="css/estilo.css">
+    <title>Selecting Elements #04</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="conteudo exercicio">
+<body class="content exercise">
     <div>
-        <p>Início</p>
+        <p>Start</p>
     </div>
     <div>
         <ul>
@@ -19,10 +19,37 @@
         </ul>
     </div>
     <div>
-        <p>Fim</p>
+        <p>End</p>
     </div>
     <script>
-        // ...
+        function log() {
+            console.log(this)
+        }
+
+        HTMLCollection.prototype.log = log
+        HTMLElement.prototype.log = log
+        NodeList.prototype.log = log
+        Node.prototype.log = log
+
+        const list = document.querySelector('div ul')
+        list.parentNode.log()
+        list.childNodes.log()
+
+        const first = list.firstChild
+        first.log()
+        first.nextSibling.log()
+
+        const last = list.lastChild
+        last.log()
+        last.previousSibling.log()
+
+        list.children.log()
+        list.firstElementChild.log()
+        list.lastElementChild.log()
+        list.parentNode.previousElementSibling.log()
+        list.parentNode.nextElementSibling.log()
+
+        document.querySelectorAll('div ul li').log()
     </script>
 </body>
 
