--- a/studies/dom/accessingClasses.html
+++ b/studies/dom/accessingClasses.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Acessando Classes</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <title>Accessing Classes</title>
+    <link rel='stylesheet' href='css/style.css'>
 </head>
 
-<body class='conteudo exercicio'>
+<body class='content exercise'>
     <div>
         Classes
     </div>
