--- a/studies/dom/index.html
+++ b/studies/dom/index.html
@@ -18,12 +18,12 @@
                 <a href="./selectingElements2.html">Selecting Elements #02</a>
                 <a href="./selectingElements3.html">Selecting Elements #03</a>
                 <a href="./selectingElements4.html">Selecting Elements #04</a>
-                <a href="./acessandoAtributos1.html">Acessando Atributos #01</a>
-                <a href="./acessandoAtributos2.html">Acessando Atributos #02</a>
-                <a href="./acessandoAtributos3.html">Acessando Atributos #03</a>
+                <a href="./accessingAttributes1.html">Accessing Attributes #01</a>
+                <a href="./accessingAttributes2.html">Accessing Attributes #02</a>
+                <a href="./accessingAttributes3.html">Accessing Attributes #03</a>
             </nav>
             <nav>
-                <a href="./acessandoClasses.html">Acessando Classes</a>
+                <a href="./accessingClasses.html">Accessing Classes</a>
                 <a href="./modificandoHTML1.html">Modificando HTML #01</a>
                 <a href="./modificandoHTML2.html">Modificando HTML #02</a>
                 <a href="./trabalhandoComEventos1.html">Trabalhando c/ Eventos #01</a>
