DOM modify HTML

--- a/studies/dom/index.html
+++ b/studies/dom/index.html
@@ -24,8 +24,8 @@
             </nav>
             <nav>
                 <a href="./accessingClasses.html">Accessing Classes</a>
-                <a href="./modificandoHTML1.html">Modificando HTML #01</a>
-                <a href="./modificandoHTML2.html">Modificando HTML #02</a>
+                <a href="./modifyHTML1.html">Modify HTML #01</a>
+                <a href="./modifyHTML2.html">Modify HTML #02</a>
                 <a href="./trabalhandoComEventos1.html">Trabalhando c/ Eventos #01</a>
                 <a href="./trabalhandoComEventos2.html">Trabalhando c/ Eventos #02</a>
                 <a href="./trabalhandoComEventos3.html">Trabalhando c/ Eventos #03</a>
