--- a/studies/dom/index.html
+++ b/studies/dom/index.html
@@ -26,10 +26,10 @@
                 <a href="./accessingClasses.html">Accessing Classes</a>
                 <a href="./modifyHTML1.html">Modify HTML #01</a>
                 <a href="./modifyHTML2.html">Modify HTML #02</a>
-                <a href="./workWithEvents1.html">Trabalhando c/ Eventos #01</a>
-                <a href="./workWithEvents2.html">Trabalhando c/ Eventos #02</a>
-                <a href="./workWithEvents3.html">Trabalhando c/ Eventos #03</a>
-                <a href="./workWithEvents4.html">Trabalhando c/ Eventos #04</a>
+                <a href="./workWithEvents1.html">Work with events #01</a>
+                <a href="./workWithEvents2.html">Work with events #02</a>
+                <a href="./workWithEvents3.html">Work with events #03</a>
+                <a href="./workWithEvents4.html">Work with events #04</a>
                 <a href="./flappy.html">Projeto Flappy Bird</a>
             </nav>
         </div>
