--- a/studies/dom/workWithEvents3.html
+++ b/studies/dom/workWithEvents3.html
@@ -4,20 +4,20 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Trabalhando com Eventos #03</title>
+    <title>Work with events #03</title>
     <style>
         body {
             margin: 0;
             display: flex;
         }
         
-        .esquerda {
+        .left {
             height: 100vh;
             width: 50%;
             background-color: coral;
         }
         
-        .direita {
+        .right {
             height: 100vh;
             width: 50%;
             background-color: cornflowerblue;
@@ -37,15 +37,30 @@
 </head>
 
 <body>
-    <div class="esquerda" wm-dropzone>
+    <div class="left" wm-dropzone>
         <div class="item">1</div>
         <div class="item">2</div>
         <div class="item">3</div>
         <div class="item">4</div>
     </div>
-    <div class="direita" wm-dropzone></div>
+    <div class="right" wm-dropzone></div>
     <script>
-        // ...
+        const items = document.querySelectorAll('[wm-dropzone] .item')
+        items.forEach((item, index) => {
+            item.draggable = true
+            item.id = item.id || `draggable-item-${index}`
+            item.ondragstart = e => e.dataTransfer.setData('item-id', e.target.id)
+        })
+        const dropzones = document.querySelectorAll('[wm-dropzone]')
+        dropzones.forEach(dropzone => {
+            dropzone.ondragover = e => e.preventDefault()
+            dropzone.ondrop = function (e){
+                const id = e.dataTransfer.getData('item-id')
+                const item = document.getElementById(id)
+                // e.target.appendChild(item)
+                dropzone.appendChild(item)
+            }
+        })
     </script>
 </body>
 
