--- a/studies/ajax/xmlHttpRequest3.html
+++ b/studies/ajax/xmlHttpRequest3.html
@@ -11,6 +11,38 @@
     <h1>States</h1>
 
     <script>
-        // ...
+        function ajax(config){
+            const xhr = new XMLHttpRequest()
+            xhr.open(config.method, config.url, true)
+
+            xhr.onreadystatechange = e => {
+                if (xhr.readyState === 4) {
+                    if (xhr.status === 200) {
+                        config.sucess(xhr.responseXML)
+                    }else if (xhr.status >= 400){
+                        config.error({
+                            code: xhr.status,
+                            text: xhr.statusText
+                        })
+                    }
+                }
+            }
+            xhr.send()
+        }
+        ajax({
+            url: "data/states.xml",
+            method: "get",
+            sucess(response) {
+                const states = response.getElementsByTagName('state')
+                const items = Array.from(states).reduce(
+                    (html, state) => html + `<li>${state.attributes.name.value}</li>`,''
+                )
+                document.body.insertAdjacentHTML('beforeend', `<ul>${items}</ul>`)
+            },
+            error(e) {
+                const msg = document.createTextNode(`${e.code}: ${e.text}`)
+                document.body.appendChild(msg)
+            }
+        })
     </script>
 </body>
