ajax with axios

--- a/studies/ajax/axios1.html
+++ b/studies/ajax/axios1.html
@@ -12,6 +12,12 @@
     <h1>States</h1>
 
     <script>
-        // ...
+        const url = 'data/states.json'
+        axios(url).then(resp => {
+            const items = resp.data.reduce(
+                (html, state) => html + `<li>${state.name}</li>`, ''
+            )
+            document.body.insertAdjacentHTML('beforeend', `<ul>${items}</ul>`)
+        })
     </script>
 </body>
