--- a/studies/ajax/jqueryAjax.html
+++ b/studies/ajax/jqueryAjax.html
@@ -14,6 +14,33 @@
     <div id="post"></div>
 
     <script>
-        // ...
+        function showResult(id, data) {
+            const text = JSON.stringify(data)
+            document.getElementById(id).innerHTML = text
+        }
+
+        $.ajax({
+            url: 'evenOrOdd',
+            data: {
+                number: 6
+            },
+            success(data) {
+                showResult('get', data)
+            }
+        })
+        $.ajax({
+            url: 'form',
+            method: 'post',
+            data: {
+                name:'João',
+                surname: 'Silva'
+            },
+            success(data){
+                showResult('post', data)
+            },
+            error(e) {
+                showResult('post', e)
+            }
+        })
     </script>
 </body>
