--- a/studies/jquery/selectingElements1.html
+++ b/studies/jquery/selectingElements1.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Selecionando Elementos #01</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <title>Selecting Elements #01</title>
+    <link rel='stylesheet' href='css/style.css'>
     <script src='js/jquery.js'></script>
     <style>
-        .negrito {
+        .bold1 {
             font-weight: bold;
         }
 
@@ -25,30 +25,48 @@
     </style>
 </head>
 
-<body class='conteudo exercicio'>
-    <h1>Selecionando Elementos #01</h1>
+<body class='content exercise'>
+    <h1>Selecting Elements #01</h1>
     <div>
-        <p>Parágrafo
-            <span class='negrito'>dentro span</span>
+        <p>Paragraph
+            <span class='bold1'>inside span</span>
         </p>
     </div>
     <div>
-        <ul id='feira'>
-            <li>Arroz</li>
-            <li wm-obrigatorio>Feijão</li>
-            <li class='opcional'>Carne</li>
-            <li class='opcional'>Ovo</li>
+        <ul id='market'>
+            <li>Rice</li>
+            <li wm-required>Bean</li>
+            <li class='optional'>Meat</li>
+            <li class='optional'>Egg</li>
         </ul>
     </div>
     <form>
-        <input type='text' name='texto'>
-        <input type='password' name='senha'>
+        <input type='text' name='text1'>
+        <input type='password' name='password1'>
         <input type='checkbox' name='check1'>
         <input type='radio' name='radio1'>
-        <input type='file' name='arquivo'>
+        <input type='file' name='file1'>
     </form>
 
     <script>
-        // ...
+        $('#market').addClass('spotlight').removeClass('spotlight')
+        $('li').addClass('spotlight')
+        $('[wm-required]').removeClass('spotlight')
+        $('li.optional').removeClass('spotlight')
+        $('div p span').addClass('spotlight')
+
+        //jQuery exclusive
+        $('li:first').css('border', 'solid 3px yellow')
+        $('li:odd').css('border', 'solid 10px orange')
+        $('li:gt(1)').css('border', 'solid 10px white')
+        $('li:not(:last)').css('border', 'none')
+        $('li:contains("R")').css('background-color', 'black')
+
+        $('form *').hide()
+        $('form :text').show()
+        $('form :password').show()
+        $('form :checkbox').show()
+        $('form :radio').show()
+        $('form :file').show()
     </script>
 </body>
