--- a/studies/jquery/understandingJQuery.html
+++ b/studies/jquery/understandingJQuery.html
@@ -4,16 +4,26 @@
 <head>
     <meta charset='UTF-8'>
     <title>Entendendo jQuery</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <link rel='stylesheet' href='css/style.css'>
     <script src="js/jquery.js"></script>
 </head>
 
-<body class="conteudo exercicio">
+<body class="content exercise">
     <h1>Entendendo jQuery</h1>
     <div>1</div>
     <div>2</div>
 
     <script>
-        // ...
+        $('div').hide(5000).show(5000).fadeOut(5000)
+        console.log($('div').get(0))
+        console.log($.isEmptyObject({ name: null }))
+        console.log($.inArray(3, [1, 2, 3]))
+
+        $.fn.greenbackground = function () {
+            this.css('background-color', 'green')
+            return this
+        }
+
+        $('body').greenbackground().fadeOut(3000)
     </script>
 </body>
