--- a/studies/jquery/modifyingHTML1.html
+++ b/studies/jquery/modifyingHTML1.html
@@ -3,18 +3,39 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Modificando HTML #01</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <title>Modifying HTML #01</title>
+    <link rel='stylesheet' href='css/style.css'>
     <script src='js/jquery.js'></script>
 </head>
 
-<body class='conteudo exercicio'>
-    <h1>Modificando HTML #01</h1>
-    <div id='conteudo1'></div>
-    <div id='conteudo2'></div>
-    <div id='conteudo3'></div>
+<body class='content exercise'>
+    <h1>Modifying HTML #01</h1>
+    <div id='content1'></div>
+    <div id='content2'></div>
+    <div id='content3'></div>
+    <div>Without ID</div>
 
     <script>
-        // ...
+        //content 1
+        $('#content1').append('<p>1</p>')
+
+        //content 2
+        const elements = [
+            $('<li></li>').append('Rice'),
+            $('<li>').append('Beams'),
+            $('<li>').append('Ham')
+        ]
+
+        const list = $('<ul><li>Ice cream</li></ul>').prepend(elements)
+        $('#content2').append(list)
+
+        //content 3
+        $('#content3').append(['<h1>1</h1>', '<h1>2</h1>'])
+            .prepend('<h1>0</h1>')
+        $('#content3').html('<h1>123</h1>')
+        $('#content3').text('<h1>123</h1>')
+
+        //changing everyone
+        $('div').html('<strong>Everyone!</strong>')
     </script>
 </body>
