--- a/studies/jquery/selectingElements2.html
+++ b/studies/jquery/selectingElements2.html
@@ -3,19 +3,19 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Selecionando Elementos #02</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <title>Selecting Elements #02</title>
+    <link rel='stylesheet' href='css/style.css'>
     <script src='js/jquery.js'></script>
     <style>
         body {
             display: grid;
             grid-template-columns: 250px 1fr;
             grid-template-rows: 95px 1fr 55px;
-            grid-template-areas: "cabecalho cabecalho" "menu conteudo" "rodape rodape";
+            grid-template-areas: "header header""menu content""footer footer";
         }
 
         header {
-            grid-area: cabecalho;
+            grid-area: header;
             background-color: #fff;
             color: #000;
             padding-left: 20px;
@@ -26,14 +26,14 @@
         }
 
         main {
-            grid-area: conteudo;
+            grid-area: content;
             background-color: #dedede;
             color: #000;
             padding: 10px;
         }
 
         footer {
-            grid-area: rodape;
+            grid-area: footer;
             background-color: #fff;
             color: #000;
             padding-left: 20px;
@@ -68,19 +68,47 @@
             </ul>
         </nav>
     </aside>
-    <main class="conteudo-principal">
-        <h1>Título do Conteúdo</h1>
+    <main class="main-content">
+        <h1>Content Title</h1>
         <section>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore
+                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                commodo
+                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur.
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+                laborum.
+                <span><b>Inside of span.</b></span>
+            </p>
         </section>
     </main>
     <footer>
-        <p>Cod3r Ensino</p>
+        <p>Cod3r</p>
     </footer>
     <script>
-        // ...
+        const withBorder = { 'border': 'solid 8px orange' }
+        const withoutBorder = { 'border': 'none' }
+
+        $('a[href="#link3"]').parent().css(withBorder).css(withoutBorder)
+
+        $('li:last').prev().css(withBorder).css(withoutBorder)
+        $('a[href="#link3"]').parent().next().css(withBorder).css(withoutBorder)
+
+        $('a[href="#link1"]').parents().css(withBorder).css(withoutBorder)
+        $('a[href="#link1"]').parentsUntil($('body')).css(withBorder).css(withoutBorder)
+
+        $('main').children().css(withBorder).css(withoutBorder)
+
+        $('body').find('a').css(withBorder).css(withoutBorder)
+
+        const elementDOM = document.getElementsByClassName('menu')
+        $(elementDOM).css(withBorder)
+
+        $('main').children().each((i, e) => $(e).css(withBorder).css(withoutBorder))
+        $('li').each((i , e) => {
+            $(e).css(withBorder)
+        })
     </script>
 </body>
