--- a/studies/jquery/manipulatingAttributes.html
+++ b/studies/jquery/manipulatingAttributes.html
@@ -3,15 +3,15 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Manipulando Atributos</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <title>Manipulating Attributes</title>
+    <link rel='stylesheet' href='css/style.css'>
     <script src='js/jquery.js'></script>
     <style>
-        [wm-relogio] {
+        [wm-clock] {
             text-align: center;
         }
 
-        [wm-relogio] button {
+        [wm-clock] button {
             font-size: 1.6em;
             padding: 0px 25px;
             margin: 10px;
@@ -19,10 +19,44 @@
     </style>
 </head>
 
-<body class='conteudo exercicio'>
-    <h1>Manipulando Atributos</h1>
-    <div wm-relogio='1000'></div>
+<body class='content exercise'>
+    <h1>Manipulating Attributes</h1>
+    <div wm-clock='1000'></div>
+    <div wm-clock='3000'></div>
     <script>
-        // ...
+        function Clock(element){
+            const rightTime = $('<p>').html('0')
+            const buttonDecrease = $('<button>').html('-')
+            const buttonIncrease = $('<button>').html('+')
+
+            const $element = $(element)
+            $element.append(rightTime, buttonDecrease, buttonIncrease)
+
+            const getCurrentInterval = () => parseInt($element.attr('wm-clock'))
+
+            let timer = null
+            const start = () => {
+                if (timer) clearInterval(timer)
+                timer = setInterval(() => {
+                    rightTime.html(new Date().toLocaleString('pt-PT'))
+                }, getCurrentInterval())
+            }
+            
+            const changeInterval = delta => {
+                const new1 = Math.max(getCurrentInterval() + delta, 1000)
+                $element.attr('wm-clock', new1)
+                start()
+            }
+
+            buttonDecrease.click(e => changeInterval(1000))
+            buttonIncrease.click( e => changeInterval(-1000))
+            start()
+        }
+        $('[wm-clock]').each((i, e) => new Clock(e))
+
+        // $('[wm-clock]').attr('ops') read attr
+        // $('[wm-clock]').attr('ops') change or include attr
+        $('[wm-clock]').attr({ ops: 1, new1: true })
+        $('[wm-clock]').removeAttr('ops').removeAttr('new1')
     </script>
 </body>
