--- a/studies/jquery/manipulatingCSS.html
+++ b/studies/jquery/manipulatingCSS.html
@@ -3,18 +3,33 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Manipulando CSS</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <title>Manipulating CSS</title>
+    <link rel='stylesheet' href='css/style.css'>
     <script src='js/jquery.js'></script>
 </head>
 
-<body class='conteudo exercicio'>
-    <h1>Manipulando CSS</h1>
+<body class='content exercise'>
+    <h1>Manipulating CSS</h1>
     <div id='div1'>1</div>
     <div id='div2'>2</div>
-    <div id='div3'>3</div>
-    <div id='resultado'></div>
+    <div id='result'></div>
     <script>
-        // ...
+        const font = $('#div1').css('font-family')
+        $('#result').append(`Font is ${font}`)
+
+        $('#div1').css('font-size', '3em')
+        $('#div1').css({ 'font-size': '3.5em', 'color': 'yellow' })
+        $('#div1').css('font-size', function() {
+            return `${2 * 2}em`
+        })
+
+        $('#div2').addClass('spotlight')
+
+        const haveClass = $('#div2').hasClass('spotlight')
+        $('#result').append(`<br> Have class? ${haveClass}`)
+
+        $('#div2').removeClass('spotlight')
+        $('#div2').toggleClass('spotlight')
+        $('#div2').toggleClass('spotlight')
     </script>
 </body>
