--- a/studies/jquery/events1.html
+++ b/studies/jquery/events1.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset='UTF-8'>
-    <title>Eventos #01</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <title>Events #01</title>
+    <link rel='stylesheet' href='css/style.css'>
     <script src='js/jquery.js'></script>
     <style>
         input {
@@ -13,13 +13,41 @@
     </style>
 </head>
 
-<body class='conteudo exercicio'>
-    <h1>Eventos #01</h1>
-    <div id='posicao'></div>
-    <div id='cliques'>Cliques: 0</div>
-    <input type="text" placeholder="Cor de Background">
+<body class='content exercise'>
+    <h1>Events #01</h1>
+    <div id='position'></div>
+    <div id='clicks'>Clicks: 0</div>
+    <input type="text" placeholder="Background Color">
 
     <script>
-        // ...
+        function displayMousePosition(e) {
+            $('#position').html(`x: ${e.clientX} y: ${e.clientY}`)
+        }
+
+        $('body').on('mousemove', displayMousePosition)
+
+        $('#position').mouseover(e => {
+            $('body').off('mousemove', displayMousePosition)
+        })
+
+        $('#position').mouseleave(e => {
+            $('body').mousemove(displayMousePosition)
+        })
+
+        let clicks = 0
+        $('body').click(e => {
+            $('#clicks').html(`Clicks: ${++clicks}`)
+        })
+
+        const originalBackground = $('body').css('background-color')
+
+        $('input').keyup(function (e) {
+            const value = $(this).val()
+            if (value.match(/#[\da-fA-F]{3,6}/)) {
+                $('body').css('background-color', value)
+            } else {
+                $('body').css('background-color', originalBackground)
+            }
+        })
     </script>
 </body>
