--- a/studies/jquery/plugin1.html
+++ b/studies/jquery/plugin1.html
@@ -4,24 +4,44 @@
 <head>
     <meta charset='UTF-8'>
     <title>Plugin #01</title>
-    <link rel='stylesheet' href='css/estilo.css'>
+    <link rel='stylesheet' href='css/style.css'>
     <script src='js/jquery.js'></script>
 </head>
 
-<body class='conteudo exercicio'>
+<body class='content exercise'>
     <h1>Plugin #01</h1>
     <div>
         {{ 1 + 2 }}
-        Texto 1
+        Text 1
         {{ 3 ** 3 }}
-        Texto 2
-        {{ console.log('Funcionou!') }}
-        Texto 3
-        {{ (function() { return 'Legal!!!' })() }}
-        Texto Final
+        Text 2
+        {{ console.log('Works!') }}
+        Text 3
+        {{ (function() { return 'Cool!!!' })() }}
+        Final Text
     </div>
 
     <script>
-        // ...
+        // const $ = { name: 'It is not a jQuery' }
+
+            (function ($) {
+                $.fn.interpret = function () {
+                    const withdrawKeys = s => s.substring(2, s.length - 2)
+                    const content = $(this).html()
+                    const keyedExpressions = content.match(/\{\{.+\}\}/g)
+                    const expressions = keyedExpressions.map(withdrawKeys)
+                    const results = expressions.map(e => eval(e))
+
+                    let finalContent = content
+                    for(let i = 0; i < keyedExpressions.length; i++){
+                        finalContent = finalContent.replace(
+                            keyedExpressions[i], results[i]
+                        )
+                    }
+                    $(this).html(finalContent)
+                }
+            })(jQuery)
+
+            $('div').interpret()
     </script>
 </body>
