Plugin timer jQuery

--- a/studies/jquery/plugin1.html
+++ b/studies/jquery/plugin1.html
@@ -39,6 +39,7 @@
                         )
                     }
                     $(this).html(finalContent)
+                    return this
                 }
             })(jQuery)
 
