--- a/studies/jquery/plugin2.html
+++ b/studies/jquery/plugin2.html
@@ -4,15 +4,18 @@
 <head>
     <meta charset='UTF-8'>
     <title>Plugin #02</title>
-    <link rel='stylesheet' href='css/temporizador.css'>
+    <link rel='stylesheet' href='css/timer.css'>
     <script src='js/jquery.js'></script>
 </head>
 
 <body>
-    <h1>Plugin #02 - Temporizador</h1>
+    <h1>Plugin #02 - Timer</h1>
     <div></div>
-    <script src="js/temporizador.js"></script>
+    <script src="js/timer.js"></script>
     <script>
-        // ...
+        $('div').timer({
+            message: 'soon a new site for you',
+            schedule: '18:07:30'
+        }).hide().fadeIn(3000)
     </script>
 </body>
