Bootstrap fundamentals (spaces)

--- a/studies/bootstrap/exercises/pages/fundamentals.html
+++ b/studies/bootstrap/exercises/pages/fundamentals.html
@@ -1,34 +1,36 @@
-<!-- Título (jumbotron) -->
+<!-- Title (jumbotron) -->
 <!-- Breadcrumb -->
 
-<div class="exercicio">
-    <h1>1. Tipografia -
+<div class="exercise">
+    <h1>1. Typography -
         <small>
-            <a href="https://getbootstrap.com/docs/4.0/content/typography/" target="_black">Documentação Oficial</a>
+            <a href="https://getbootstrap.com/docs/4.0/content/typography/" target="_black">Official Documentation</a>
         </small>
     </h1>
     <hr>
 
     <ul>
-        <li><strong>Reboot</strong> - Torna consistente o estilo entre diferentes browser!</li>
-        <li><strong>Rems</strong> - Baseado no raiz</li>
-        <li>Evita <strong>margin-top</strong> - Provavelmente será necessário adicionar algum espaço</li>
-        <li><strong>box-sizing</strong> border-box</li>
-        <li>Fontes nativas</li>
+        <li><strong>Reboot</strong> -Make style consistent across different browsers!</li>
+        <li><strong>Rems</strong> - Root-based</li>
+        <li>Avoid <strong>margin-top</strong> - You will probably need to add some space</li>
+        <li>Use <strong>box-sizing</strong> border-box</li>
+        <li>native fonts</li>
     </ul>
 
-    <h1 class="mt-5">2. Espaços -
+    <h1 class="mt-5">2. Spaces -
         <small>
-            <a href="https://getbootstrap.com/docs/4.0/utilities/spacing/" target="_black">Documentação Oficial</a>
+            <a href="https://getbootstrap.com/docs/4.0/utilities/spacing/" target="_black">Official Documentation</a>
         </small>
     </h1>
     <hr>
 
-    <!-- Espaços -->
-
-    <h1 class="mt-5">3. Cores -
+    <!-- Spaces -->
+    <div class="mb-5">1</div>
+    <div class="m-4 py-4">2</div>
+    <div class="pt-5">3</div>
+    <h1 class="mt-5">3. Colors -
         <small>
-            <a href="https://getbootstrap.com/docs/4.0/utilities/colors/" target="_black">Documentação Oficial</a>
+            <a href="https://getbootstrap.com/docs/4.0/utilities/colors/" target="_black">Official Documentation</a>
         </small>
     </h1>
     <hr>
@@ -37,16 +39,16 @@
 
     <h1 class="mt-5">4. Flex -
         <small>
-            <a href="https://getbootstrap.com/docs/4.0/utilities/flex/" target="_black">Documentação Oficial</a>
+            <a href="https://getbootstrap.com/docs/4.0/utilities/flex/" target="_black">Official Documentation</a>
         </small>
     </h1>
     <hr>
 
     <!-- Flex -->
 
-    <h1 class="mt-5">5. Imagens -
+    <h1 class="mt-5">5. Images -
         <small>
-            <a href="https://getbootstrap.com/docs/4.0/content/images/" target="_black">Documentação Oficial</a>
+            <a href="https://getbootstrap.com/docs/4.0/content/images/" target="_black">Official Documentation</a>
         </small>
     </h1>
     <hr>
@@ -55,7 +57,7 @@
 
     <h1 class="mt-5">6. Float -
         <small>
-            <a href="https://getbootstrap.com/docs/4.0/utilities/float/" target="_black">Documentação Oficial</a>
+            <a href="https://getbootstrap.com/docs/4.0/utilities/float/" target="_black">Official Documentation</a>
         </small>
     </h1>
     <hr>
@@ -64,7 +66,7 @@
 </div>
 
 <style>
-    .exercicio div {
+    .exercise div {
         border: solid 8px #000;
         font-size: 2rem;
     }
